# myportfolio

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uwsgi.ini
mywebsite/: manage.py
mywebsite/mywebsite/: settings.py  urls.py  wsgi.py
mywebsite/websitecore/: urls.py  views.py
mywebsite/websitecore/static/core/css/: style.css
mywebsite/websitecore/templates/core/: about.html  base.html  home.html
